[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qboost"
version = "0.8.5"
description = "Quantum-Boost Encryption Toolkit - Hybrid classical + post-quantum cryptography"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Team JRTI" }]
keywords = ["post-quantum", "hybrid-encryption"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=42.0.0"]

[project.optional-dependencies]
pq = ["liboqs-python"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/jbaelaw/qboost"
Repository = "https://github.com/jbaelaw/qboost"
Issues = "https://github.com/jbaelaw/qboost/issues"

[tool.setuptools.packages.find]
include = ["qboost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
